--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Trunk Template</title>
-    <link data-trunk rel="sass" href="index.scss" />
+    <link data-trunk href="./tailwind.css" rel="css" />
   </head>
 </html>
