--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-    <meta charset="utf-8" />
-    <title>Trunk Template</title>
-    <link data-trunk href="./tailwind.css" rel="css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link data-trunk rel="icon" href="logo.svg" type="image/svg" /> -->
+    <link rel="stylesheet" href="./index.css" />
+    <title>Notion clone with yew.rs</title>
   </head>
 </html>
