finish bubble menu button in selection and init icons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link data-trunk rel="icon" href="logo.svg" type="image/svg" /> -->
+    <link data-trunk rel="icon" href="/assets/favicon/favicon.ico" />
     <link rel="stylesheet" href="./index.css" />
+
+    <link data-trunk rel="copy-dir" href="assets" />
+
     <title>Notion clone with yew.rs</title>
   </head>
 </html>
