--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link data-trunk rel="icon" href="/assets/favicon/favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/27245f579f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./index.css" />
 
     <link data-trunk rel="copy-dir" href="assets" />
